# mlrisk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: vol_target_demo.c
include/mlrisk/: linreg.h  mlrisk.h  risk.h  rolling.h  sizing.h  split.h  types.h  vol.h
src/: linreg.c  risk.c  rolling.c  sizing.c  split.c  vol.c
tests/: test_linreg.c  test_main.c  test_risk.c  test_rolling.c  test_sizing.c  test_split.c  test_vol.c
